# kestrel-linux-transport

./: .gitignore  .travis.yml  Benchmark.md  LICENSE  NuGet.config  README.md  RedHat.AspNetCore.Server.Kestrel.Transport.sln  THIRD-PARTY-NOTICES.txt  dependencies.props  global.json
samples/BenchmarkApp/: BenchmarkApp.csproj  JsonMiddleware.cs  NuGet.config  PlainTextMiddleware.cs  Program.cs  appsettings.json  benchmarks.plaintext.json
samples/HttpServer/: HttpRequestParser.cs  HttpServer.cs  HttpServer.csproj  Program.cs  project.json
samples/KestrelSample/: KestrelSample.csproj  Program.cs  appsettings.json  project.json
src/: CMakeLists.txt  build-native.sh  configure.cmake  gen-buildsys-clang.sh
src/Common.Native/: config.h.in  pal_types.h  pal_utilities.h  utilities.h
src/RedHat.AspNetCore.Server.Kestrel.Transport.Linux/: AcceptThread.cs  AddressNotAvailableException.cs  Aio.cs  Assembly.cs  CloseSafeHandle.cs  CpuInfo.cs  CpuSet.cs  CpuSetTypeConverter.cs  EPoll.cs  EPollEvent.cs  EPollEvents.cs  EPollOperation.cs  ErrorInterop.cs  IOInterop.cs  IPEndPointStruct.cs  ITransportActionHandler.cs  Interop.cs  PipeEnd.cs  PosixResult.Values.cs  PosixResult.cs  RedHat.AspNetCore.Server.Kestrel.Transport.Linux.csproj  SlabMemoryPool.cs  Socket.Address.cs  Socket.Enums.cs  Socket.cs  Transport.cs  (+10 more)
src/RedHat.AspNetCore.Server.Kestrel.Transport.Linux.Native/: CMakeLists.txt  aio.cpp  io.cpp  pipeend.cpp  socket.cpp
src/RedHatX.AspNetCore.Server.Kestrel.Transport.Linux.Native/: CMakeLists.txt  aio.cpp  epoll.cpp  error.cpp  io.cpp  scheduler.cpp  socket.cpp
(+94 files in other folders)
